script ajout objectifs/règles

--- a/intégration/HTML/formB.html
+++ b/intégration/HTML/formB.html
@@ -41,17 +41,17 @@
     </header>
     <main>
         <h2>racontez votre histoire ou découvrez-en de nouvelle !</h2>
-        <ul class="objetifsList">
-            <li class="Objectif">Take all objectifs</li>
+        <ul class="list">
+            
         </ul>
         <form action="">
             <div class="formContainer">
                 <div class="mb-3">
                     <label for="" class="form-label formTitle">Objectif </label>
-                    <input type="text" class="form-control" name="formTitle">
+                    <input type="text" class="form-control item" name="formTitle">
                 </div>
-                <button type="button" class="col mb-3 btn btn-secondary"><i class="fas fa-plus"></i></button>
-                <button type="submit" class="col btn btn-primary mb-3">Règles spéciales</button>
+                <button type="submit" class="col mb-3 btn btn-secondary"><i class="fas fa-plus"></i></button>
+                <button type="button" class="col btn btn-primary mb-3">Règles spéciales</button>
             </div>
         </form>
     </main>
@@ -74,6 +74,7 @@
         </div>
     </footer>
     <script src="../JS/index.js"></script>
+    <script src="../JS/form.js"></script>
 </body>
 
 </html>
