--- a/intégration/HTML/formD.html
+++ b/intégration/HTML/formD.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZombiTales</title>
     <link rel="stylesheet" href="../CSS/index.css">
-    <link rel="stylesheet" href="../CSS/home.css">
+    <link rel="stylesheet" href="../CSS/scenar.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/52cf71d0dc.js" crossorigin="anonymous"></script>
 
 </head>
@@ -28,16 +30,83 @@
                     <li><a href="javascript:void(0)" class="headerVersion headerLink headerNav">Invader</a></li>
                     <li><a href="javascript:void(0)" class="headerVersion headerLink headerNav">Black plague</a></li>
                     <li><a href="javascript:void(0)" class="headerVersion headerLink headerNav">Green horde</a></li>
-                    <li><a href="javascript:void(0)" class="headerVersion headerLink headerNav">Night of the living dead</a></li>
+                    <li><a href="javascript:void(0)" class="headerVersion headerLink headerNav">Night of the living
+                            dead</a></li>
                     <li><a href="javascript:void(0)" class="headerVersion headerLink headerNav">Undead or alive</a></li>
-                    <li><a href="javascript:void(0)" class="headerVersion headerLink headerNav closeButton"><i class="fas fa-times-circle"></i></a></li>
+                    <li><a href="javascript:void(0)" class="headerVersion headerLink headerNav closeButton"><i
+                                class="fas fa-times-circle"></i></a></li>
                 </ul>
             </ul>
         </div>
     </header>
     <main>
         <h2>racontez votre histoire ou découvrez-en de nouvelle !</h2>
-        
+        <section class="scenarSection">
+            <div class="scenarLeft">
+                <div class="scenarTiltles">
+                    <h3 class="scenarTiltle">WM7 - CHASING NIGHTMARES </h3>
+                    <p class="scenarAuth">posté par : <span class="auth">Pedro le plot</span></p>
+                    <p class="scenarLvl">Medium / +4 survivant / 90 minutes</p>
+                </div>
+                <div class="scenarTales">
+                    <p class="tales">As brave and bold as they are, the kids confessed that they still have nightmares
+                        about the zombies, especially Abominations. Indeed, most of them are truly monstrous, and, well,
+                        sometimes they give the adults the heebie-jeebies too! Having the soul of a warrior, Tiger Sam
+                        suggested we face our own fears. We accepted the challenge and are now heading to the most
+                        infested district in town. I hope this is not another bad dream!</p>
+                </div>
+                <div class="scenarMaterials">
+                    <p class="scenarMaterial">Material needed : <span class="scenarVersion">Zombicide : 2nd
+                            Edition.</span></p>
+                    <p class="scenarMaterial">Tiles needed : <span class="scenarTiles"> 1V, 2V, 5R, 7V, 8R, & 9R.</span>
+                    </p>
+                </div>
+                <div class="scenarObjectives">
+                    <h4 class="objectivesTiltle">OBJECTIVES</h4>
+                    <p><span class="em">Kill your fear. </span>Accomplish these Objectives in any order to win the game
+                    </p>
+                    <ul class="objectivesUl">
+                        <li class="objectivesLi">Each Survivor has an Objective token (see Special Rules).</li>
+                        <li class="objectivesLi">Eliminate at least 4 Abominations with different names</li>
+                    </ul>
+                    <span class="objectiveSpe">This Mission uses the Abomination Fest rules (rulebook,
+                        P. 30).</span>
+                </div>
+                <div class="scenarRules">
+                    <h4 class="rulesTiltle">SPECIAL RULES</h4>
+                    <ul class="RulesUl">
+                        <li class="RulesLi">Setup. Place the Blue and the Green Objectives randomly among the
+                            Objectives, facedown.</li>
+                        <li class="RulesLi">Mark of the Tiger. Each Objective gives 5 Adrenaline Points to the Survivor
+                            who takes it.</li>
+                        <ul class="RuleSubUl">
+                            <li class="RuleSubLi">- Place the Objective token on the Survivor’s Dashboard. Itdoesn’t
+                                take up an inventory slot. A Survivor gains the Roll 6: +1 Damage Skill as long as they
+                                have 1 or more Objective tokens. Only Tiger Sam can trade Objective tokens in the same
+                                way as Equipment cards.</li>
+                            <li class="RuleSubLi">- Taking a Red Objective also spawns an Abomination on the nearest
+                                active Spawn Zone (if several are eligible, players choose)</li>
+                            <li class="RuleSubLi">- Taking the Blue or the Green Objective also activates the Spawn Zone
+                                of the corresponding color. Then, remove an active Spawn Zone token of the player’s
+                                choice (except the Starting Spawn Zone token).</li>
+                        </ul>
+                        <li class="RulesLi">Unique like me. Each Pimpweapon Crate gives a random Pimpweapon, among those
+                            still available, to the Survivor who takes it. They can then reorganize their inventory for
+                            free.</li>
+                        <li class="RulesLi"> A monster under the hood. The Police Car can be driven. When searching it,
+                            draw cards until a weapon card is drawn. Discard the other cards. The Aaahh!! card triggers
+                            the appearance of a Walker as usual and interrupts the Search.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="scenarRight">
+                <img class="scenarImg" src="../IMG/map_2.jpeg" alt="map de la partie">
+            </div>
+        </section>
+        <div class="buttonsContainer">
+            <a href="index.html" class="btn btn-primary">Envoyer</a>
+            <a href="index.html" class="btn btn-danger">Effacer</a>
+        </div>
     </main>
     <footer>
         <ul class="form">
