--- a/intégration/HTML/formC.html
+++ b/intégration/HTML/formC.html
@@ -41,18 +41,20 @@
     </header>
     <main>
         <h2>racontez votre histoire ou découvrez-en de nouvelle !</h2>
-        <ul class="ruleList">
-            <li class="rule"><span class="ruleTitle">Boum !</span> les voitures explosent si un joueur fait un 1.</li>
+        <ul class="list">
+            
         </ul>
         <form action="">
             <div class="formContainer">
                 <div class="mb-3">
                     <label for="" class="form-label formTitle">Titre</label>
+                    <input type="text" class="form-control title" name="formTitle">
+
                     <label for="" class="form-label">règles spéciale </label>
-                    <input type="text" class="form-control" name="formTitle">
+                    <input type="text" class="form-control item" name="formTitle">
                 </div>
-                <button type="button" class="col mb-3 btn btn-secondary"><i class="fas fa-plus"></i></button>
-                <button type="submit" class="col btn btn-primary mb-3">Visualiser</button>
+                <button type="submit" class="col mb-3 btn btn-secondary"><i class="fas fa-plus"></i></button>
+                <button type="button" class="col btn btn-primary mb-3">Visualiser</button>
             </div>
         </form>
     </main>
@@ -75,6 +77,7 @@
         </div>
     </footer>
     <script src="../JS/index.js"></script>
+    <script src="../JS/formB.js"></script>
 </body>
 
 </html>
