correctif bug js

--- a/intégration/HTML/formC.html
+++ b/intégration/HTML/formC.html
@@ -48,7 +48,7 @@
             <div class="formContainer">
                 <div class="mb-3">
                     <label for="" class="form-label formTitle">Titre</label>
-                    <input type="text" class="form-control title" name="formTitle">
+                    <input type="text" class="form-control spanTitle" name="formTitle">
 
                     <label for="" class="form-label">règles spéciale </label>
                     <input type="text" class="form-control item" name="formTitle">
